fix: address all code review findings in document package
- Add PdfDocumentSanitizer using PDFBox 3.0.4 (replaces broken stub)
- Fix NPE in PdfDocumentChecker embedded files detection
- Fix CsvDocumentChecker.hasSafeContent() always returning false
- Replace System.out.println with log.debug in CsvDocumentSanitizer
- Use ConcurrentHashMap for thread-safe registries in interfaces
- Remove CsvException leak from DocumentSanitizer interface
- Add pptx support in DocumentType for PowerPoint
- Delete empty ZipDocumentChecker
- Fix copy-paste "World" typos in log messages
- Clean up unused/wildcard imports, Boolean -> boolean, log levels